Add OpenWeatherMap settings and update configuration
- Introduced `OpenWeatherMapSettings` class for API settings.
- Configured application to read OpenWeatherMap settings in `Program.cs`.
- Removed unused CSS link and adjusted navbar classes in `_Layout.cshtml`.
- Updated `appsettings.json` to include OpenWeatherMap configuration and connection string.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;"
+  },
+  "OpenWeatherMap": {
+    "BaseUrl": "https://api.openweathermap.org/data/2.5/weather?",
+    "ApiKey": "e2c58cb6c626ee727141e82ed4e273a2",
+    "Timeout": 30
+  }
 }
