--- a/Weather-App.csproj
+++ b/Weather-App.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>Weather_App</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
