Add: Enhance WeatherService with error handling and JSON/XML deserialization

--- a/Weather-App.csproj
+++ b/Weather-App.csproj
@@ -9,7 +9,10 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
   </ItemGroup>
 
 </Project>
